<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.github.albertopeam.gomoku.ui.game.GameViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.game.GameFragment">

        <TextView
            android:id="@+id/playerTurn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/gridView"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@{viewModel.playerTurn}">
        </TextView>

        <com.github.albertopeam.gomoku.ui.view.GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            app:onTapListener="@{viewModel.tap}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:line_color="@color/grid"
            app:line_width="2"
            app:boardState="@{viewModel.board}"/>

        <TextView
            android:id="@+id/winStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textAlignment="center"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:visibility="@{!viewModel.winStatus.isEmpty()}"
            android:text="@{viewModel.winStatus}"
            tools:text="Black wins"
            tools:visibility="gone">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>